# urfu-python-course

./: README.md
task1-project/: pyproject.toml
task1-project/.devcontainer/: Dockerfile  devcontainer.json
task1-project/app/task1/: __init__.py  main.py
task1-project/task1/: __init__.py  main.py
