[tool.poetry]
name = "task1"
version = "0.1.0"
description = ""
authors = ["Dmitry Kvashnin <d.kvashnin@dodobrands.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
